[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/StartButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Two_pile_script.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://background.png" type="Texture" id=4]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://btns_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[node name="Two_pile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 536 )
scale = Vector2( 1.0037, 1.0037 )
texture = ExtResource( 4 )

[node name="Button1" type="Button" parent="."]
margin_left = 504.0
margin_top = 640.0
margin_right = 704.0
margin_bottom = 840.0
theme = ExtResource( 6 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1080.0
margin_top = 640.0
margin_right = 1280.0
margin_bottom = 840.0
theme = ExtResource( 6 )
text = "+2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 1408.0
margin_top = 639.0
margin_right = 1608.0
margin_bottom = 839.0
theme = ExtResource( 6 )
text = "+3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.0
margin_top = 112.0
margin_right = 110.0
margin_bottom = 160.0
text = "Vanya's Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="." instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -680.0
margin_right = 128.0
margin_bottom = -424.0
theme = ExtResource( 6 )
text = "back"
next_scene_path = "res://Screens/MainScreen.tscn"

[node name="TrackCont" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -713.0
margin_top = -369.0
margin_right = 713.0
margin_bottom = -83.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track1" type="Label" parent="TrackCont"]
light_mask = 2
margin_right = 711.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCC_1" type="ColorRect" parent="TrackCont/Track1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.517647, 0.317647, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track2" type="Label" parent="TrackCont"]
light_mask = 2
margin_left = 715.0
margin_right = 1426.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCC_2" type="ColorRect" parent="TrackCont/Track2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.517647, 0.317647, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
